--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "math-interval-parser": "^1.1.0",
     "messageformat": "^0.3.1",
     "mustache": "*",
-    "sprintf-js": "^1.1.2"
+    "sprintf-js": "^1.1.2",
+    "ioredis": "^4.9.0"
   },
   "devDependencies": {
     "async": "^2.6.2",
